Create the hdlc communicator for mt (#1)
* Create the HDLC Communicator RoundTrip

* Rename the HDLCCommunicator on proper name

--- a/test/MT/CMakeLists.txt
+++ b/test/MT/CMakeLists.txt
@@ -9,7 +9,7 @@ set(MT_HappyPath
 
 set(MT_SadPath
     ${PROJECT_SOURCE_DIR}/test/MT/UIAndControllerIntegrationTestsSadPath.cpp
-)
+        ../TestUtils/RoundTripHDLCCommunicatorStub.cpp ../TestUtils/RoundTripHDLCCommunicatorStub.hpp ../TestUtils/HexesUtils.cpp ../TestUtils/HexesUtils.hpp)
 
 add_executable(${PROJECT_TESTS_NAME}
     ${PROJECT_SOURCE_DIR}/test/main.cpp
