--- a/test/MT/CMakeLists.txt
+++ b/test/MT/CMakeLists.txt
@@ -1,15 +1,22 @@
 set(PROJECT_TESTS_NAME Almag_RetDriver_MT)
 message(${CMAKE_CURRENT_SOURCE_DIR})
 
+set(TEST_UTILS
+    ${PROJECT_SOURCE_DIR}/test/TestUtils/HDLCCommunicators/RoundTripHDLCCommunicatorStub.cpp
+    ${PROJECT_SOURCE_DIR}/test/TestUtils/HDLCCommunicators/RoundTripHDLCCommunicatorStub.hpp
+    ${PROJECT_SOURCE_DIR}/test/TestUtils/HexesUtils.cpp
+    ${PROJECT_SOURCE_DIR}/test/TestUtils/HexesUtils.hpp)
+
 set(MT_HappyPath
     ${PROJECT_SOURCE_DIR}/test/MT/AlmagControllerTest.cpp
     ${PROJECT_SOURCE_DIR}/test/MT/UIAndDBIntegration/UIAndDBIntegrationTests.cpp
-    ${PROJECT_SOURCE_DIR}/test/MT/UIAndControllerIntegrationTestsHappyPath.cpp
+    ${PROJECT_SOURCE_DIR}/test/MT/UI_Controller_RoundTripHDLC.cpp
+    ${PROJECT_SOURCE_DIR}/test/MT/UI_Controller_ZeroMqHDLC.cpp
 )
 
 set(MT_SadPath
-    ${PROJECT_SOURCE_DIR}/test/MT/UIAndControllerIntegrationTestsSadPath.cpp
-        ../TestUtils/RoundTripHDLCCommunicatorStub.cpp ../TestUtils/RoundTripHDLCCommunicatorStub.hpp ../TestUtils/HexesUtils.cpp ../TestUtils/HexesUtils.hpp)
+    ${PROJECT_SOURCE_DIR}/test/MT/UIAndControllerIntegrationTestsSadPath.cpp ../TestUtils/HDLCCommunicators/ZeroMqHDLCCommunicator.cpp ../TestUtils/HDLCCommunicators/ZeroMqHDLCCommunicator.hpp ../TestUtils/HDLCCommunicators/ZeroMqUtils.cpp ../TestUtils/HDLCCommunicators/ZeroMqUtils.hpp)
+
 
 add_executable(${PROJECT_TESTS_NAME}
     ${PROJECT_SOURCE_DIR}/test/main.cpp
@@ -25,6 +32,7 @@ add_executable(${PROJECT_TESTS_NAME}
     ${USER_INTERFACE_DATABASE}
     ${USER_INTERFACE}
     ${UTILS}
+    ${TEST_UTILS}
 )
 
 add_dependencies(${PROJECT_TESTS_NAME} gmock_main)
@@ -35,5 +43,5 @@ target_link_libraries(${PROJECT_TESTS_NAME}
     ${Boost_LIBRARIES}
     # /usr/lib/gcc/x86_64-linux-gnu/8/libstdc++fs.a # uncomment on UBUNTU, I know it sucks
     /usr/lib64/libstdc++fs.a # uncomment on Manjaro, I know it sucks
+    ${cppzmq_LIBRARY}
 )
-
