--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "3rdparty/googletest"]
 	path = 3rdparty/googletest
 	url = https://github.com/google/googletest.git
+[submodule "3rdparty/zeromq"]
+	path = 3rdparty/zeromq
+	url = https://github.com/zeromq/cppzmq.git
