[externalLibraries] Change the directory for UserInterface submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 [submodule "externalLibraries/Database"]
 	path = externalLibraries/Database
 	url = git@github.com:trunksBT/Almag_Database.git
-[submodule "3rdparty/UserInterface"]
-	path = 3rdparty/UserInterface
+[submodule "exteralLibraries/UserInterface"]
+	path = externalLibraries/UserInterface
 	url = git@github.com:trunksBT/Almag_UserInterface.git
