--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(${PROJECT_NAME}
     ${UTILS}
     ${USER_INTERFACE}
     ${HDLC}
-    ${PLUGIN_COMMAND_CONSTRAINTS}
+    ${PLUGIN_SPECIFICS}
 )
 
 target_link_libraries(${PROJECT_NAME}
