Succesfully extracted the utils

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,8 @@ include_directories(${PROJECT_SOURCE_DIR}/externalLibraries)
 
 set(DATABASE
     ${PROJECT_SOURCE_DIR}/externalLibraries/Database/Database.hpp
-    ${PROJECT_SOURCE_DIR}/externalLibraries/Database/Objects/IOPaths.cpp
     ${PROJECT_SOURCE_DIR}/externalLibraries/Database/Database.cpp
+    ${PROJECT_SOURCE_DIR}/externalLibraries/Database/Objects/IOPaths.cpp
     ${PROJECT_SOURCE_DIR}/externalLibraries/Database/Objects/IOPaths.hpp
     ${PROJECT_SOURCE_DIR}/externalLibraries/Database/Utils/KeyWithValue.hpp
 )
@@ -102,15 +102,21 @@ set(HDLC
     ${PROJECT_SOURCE_DIR}/src/HDLC/FrameTypes/FrameXID.hpp
 )
 
-set(UTILS
+set(LOGGER
     ${PROJECT_SOURCE_DIR}/src/Utils/Logger.cpp
     ${PROJECT_SOURCE_DIR}/src/Utils/Logger.hpp
+)
+
+set(UTILS
     ${PROJECT_SOURCE_DIR}/src/Utils/UserCommandParser.cpp
     ${PROJECT_SOURCE_DIR}/src/Utils/UserCommandParser.hpp
-    ${PROJECT_SOURCE_DIR}/src/Utils/Utils.hpp
-    ${PROJECT_SOURCE_DIR}/src/Utils/Utils.cpp
-    ${PROJECT_SOURCE_DIR}/src/Utils/TypeAliases.hpp
-    ${PROJECT_SOURCE_DIR}/src/Utils/Functions.hpp
+)
+
+set(EXTERNAL_LIBRARIES_UTILS
+    ${PROJECT_SOURCE_DIR}/externalLibraries/Utils/Utils.hpp
+    ${PROJECT_SOURCE_DIR}/externalLibraries/Utils/Utils.cpp
+    ${PROJECT_SOURCE_DIR}/externalLibraries/Utils/TypeAliases.hpp
+    ${PROJECT_SOURCE_DIR}/externalLibraries/Utils/Functions.hpp
 )
 
 set(PLUGIN_SPECIFICS
