Extract the abstract Zmq communicator, PubSub, ReqResp concretes

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,13 +10,14 @@ set(FIXTURES
     ${PROJECT_SOURCE_DIR}/test/Fixtures/BaseFixtureWithDBAndHDLC.cpp
 )
 
-set(TEST_UTILS
+set(TESTUTILS
     ${PROJECT_SOURCE_DIR}/test/TestUtils/Hardcodes.hpp
     ${PROJECT_SOURCE_DIR}/test/TestUtils/ObjectTypes.hpp
     ${PROJECT_SOURCE_DIR}/test/TestUtils/StructsForParametrizedTests.hpp
     ${PROJECT_SOURCE_DIR}/test/TestUtils/UniqueKeys.hpp
+    ${PROJECT_SOURCE_DIR}/test/TestUtils/HexesUtils.cpp
+    ${PROJECT_SOURCE_DIR}/test/TestUtils/HexesUtils.hpp
 )
 
 add_subdirectory(MT)
 add_subdirectory(UT)
-
