--- a/test/UT/CMakeLists.txt
+++ b/test/UT/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(${PROJECT_TESTS_NAME}
     ${DATABASE}
     ${HDLC}
     ${UTILS}
+    ${TESTUTILS_HDLC_FRAMESFACTORIES}
     ${EXTERNAL_LIBRARIES_UTILS}
     ${LOGGER}
 )
