--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ set(COMMAND_PATTERN
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/ICommand.hpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/HDLCCommand.cpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/HDLCCommand.hpp
-    ${PROJECT_SOURCE_DIR}/src/CommandPattern/IHDLCFrameBodyFactory.hpp
+    ${PROJECT_SOURCE_DIR}/src/CommandPattern/IHDLCReqFrameBodyFactory.hpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/ICommandFactory.hpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/LinkEstablishment.cpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/LinkEstablishment.hpp
@@ -97,6 +97,8 @@ set(HDLC
     ${PROJECT_SOURCE_DIR}/src/HDLC/MessagesHelpers.hpp
     ${PROJECT_SOURCE_DIR}/src/HDLC/HDLCFrameBodyInterpreter.cpp
     ${PROJECT_SOURCE_DIR}/src/HDLC/HDLCFrameBodyInterpreter.cpp
+    ${PROJECT_SOURCE_DIR}/src/HDLC/HDLCReqFrameBodyFactory.cpp
+    ${PROJECT_SOURCE_DIR}/src/HDLC/HDLCReqFrameBodyFactory.hpp
     ${PROJECT_SOURCE_DIR}/src/HDLC/FrameTypes/FrameI.cpp
     ${PROJECT_SOURCE_DIR}/src/HDLC/FrameTypes/FrameI.hpp
     ${PROJECT_SOURCE_DIR}/src/HDLC/FrameTypes/FrameSNRM.cpp
