--- a/test/UT/CMakeLists.txt
+++ b/test/UT/CMakeLists.txt
@@ -4,6 +4,7 @@ message(${CMAKE_CURRENT_SOURCE_DIR})
 set(UT
     ${PROJECT_SOURCE_DIR}/test/UT/DB/DBTests.cpp
     ${PROJECT_SOURCE_DIR}/test/UT/HDLC/HDLCReqFrameBodyTests.cpp
+    ${PROJECT_SOURCE_DIR}/test/UT/HDLC/HDLCRespFrameBodyTests.cpp
     ${PROJECT_SOURCE_DIR}/test/UT/HDLC/HDLCFrameTests.cpp
     ${PROJECT_SOURCE_DIR}/test/UT/HDLC/HDLCReqFrameInterpreterTests.cpp
     ${PROJECT_SOURCE_DIR}/test/UT/Utils/UserCommandParserTest.cpp
