Add the DeviceScan command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,12 +63,14 @@ set(COMMAND_PATTERN
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/IController.hpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/AISGProtocolVersion.cpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/AISGProtocolVersion.hpp
-    ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/AddressAssignment.cpp
+    ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/AddressAssignment.gcpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/AddressAssignment.hpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/Calibrate.cpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/Calibrate.hpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/DummyScan.cpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/DummyScan.hpp
+    ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/DeviceScan.cpp
+    ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/DeviceScan.hpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/ICommand.cpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/ICommand.hpp
     ${PROJECT_SOURCE_DIR}/src/CommandPattern/Commands/HDLCCommand.cpp
