--- a/test/MT/CMakeLists.txt
+++ b/test/MT/CMakeLists.txt
@@ -29,7 +29,7 @@ add_executable(${PROJECT_TESTS_NAME}
     ${TESTUTILS_COMMUNICATORS}
     ${TESTUTILS_HDLC_FRAMESFACTORIES}
 
-    ${COMMAND_PATTERN}
+    ${EXTERNAL_LIBRARIES_COMMAND_PATTERN}
     ${DATABASE}
     ${HDLC}
     ${UTILS}
